fix: update gitignore to exclude model files

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,37 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# YOLO 模型文件
+*.pt
+*.pth
+*.onnx
+*.weights
+
+# 训练结果和权重
+runs/
+weights/
+models/
+checkpoints/
+
+# Python 缓存文件
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# 环境文件
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# 日志文件
+*.log
+logs/
+
+# 系统文件
+.DS_Store
+Thumbs.db
